Commiting latest changes

--- a/general_trends_aggregate.ipynb
+++ b/general_trends_aggregate.ipynb
@@ -499,12 +499,220 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Do these outliers make sense? Let's check them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AUDITYEAR</th>\n",
+       "      <th>TOTFEDEXPEND_ADJUSTED</th>\n",
+       "      <th>DOLLARTHRESHOLD_ADJUSTED</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>785400</th>\n",
+       "      <td>1997</td>\n",
+       "      <td>1.418200e+09</td>\n",
+       "      <td>4.693589e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785401</th>\n",
+       "      <td>1998</td>\n",
+       "      <td>1.452402e+09</td>\n",
+       "      <td>4.621601e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785402</th>\n",
+       "      <td>1999</td>\n",
+       "      <td>1.458329e+09</td>\n",
+       "      <td>4.521735e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785403</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>1.475117e+09</td>\n",
+       "      <td>4.374686e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785404</th>\n",
+       "      <td>2001</td>\n",
+       "      <td>1.607711e+09</td>\n",
+       "      <td>4.510284e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785405</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>1.807473e+09</td>\n",
+       "      <td>5.121243e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785406</th>\n",
+       "      <td>2003</td>\n",
+       "      <td>1.916637e+09</td>\n",
+       "      <td>5.659460e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785407</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>2.053328e+09</td>\n",
+       "      <td>5.811751e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785408</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>2.032065e+11</td>\n",
+       "      <td>5.836020e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785409</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>2.040718e+09</td>\n",
+       "      <td>5.847953e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785410</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>2.046671e+09</td>\n",
+       "      <td>5.459048e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785411</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>2.151376e+09</td>\n",
+       "      <td>6.074652e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785412</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>2.376220e+09</td>\n",
+       "      <td>6.616370e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785413</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>2.591200e+09</td>\n",
+       "      <td>7.304581e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785414</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>2.710451e+09</td>\n",
+       "      <td>8.051773e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785415</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>2.662252e+09</td>\n",
+       "      <td>7.905968e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785416</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>2.750960e+09</td>\n",
+       "      <td>8.181755e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785417</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>2.768734e+09</td>\n",
+       "      <td>8.236965e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785418</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>2.825118e+09</td>\n",
+       "      <td>8.475343e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785419</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>2.925577e+09</td>\n",
+       "      <td>8.780850e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>785420</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>3.030691e+09</td>\n",
+       "      <td>9.092074e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        AUDITYEAR  TOTFEDEXPEND_ADJUSTED  DOLLARTHRESHOLD_ADJUSTED\n",
+       "785400       1997           1.418200e+09              4.693589e+06\n",
+       "785401       1998           1.452402e+09              4.621601e+06\n",
+       "785402       1999           1.458329e+09              4.521735e+06\n",
+       "785403       2000           1.475117e+09              4.374686e+06\n",
+       "785404       2001           1.607711e+09              4.510284e+06\n",
+       "785405       2002           1.807473e+09              5.121243e+06\n",
+       "785406       2003           1.916637e+09              5.659460e+06\n",
+       "785407       2004           2.053328e+09              5.811751e+06\n",
+       "785408       2005           2.032065e+11              5.836020e+06\n",
+       "785409       2006           2.040718e+09              5.847953e+06\n",
+       "785410       2007           2.046671e+09              5.459048e+06\n",
+       "785411       2008           2.151376e+09              6.074652e+06\n",
+       "785412       2009           2.376220e+09              6.616370e+06\n",
+       "785413       2010           2.591200e+09              7.304581e+06\n",
+       "785414       2011           2.710451e+09              8.051773e+06\n",
+       "785415       2012           2.662252e+09              7.905968e+06\n",
+       "785416       2013           2.750960e+09              8.181755e+06\n",
+       "785417       2014           2.768734e+09              8.236965e+06\n",
+       "785418       2015           2.825118e+09              8.475343e+06\n",
+       "785419       2016           2.925577e+09              8.780850e+06\n",
+       "785420       2017           3.030691e+09              9.092074e+06"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_analysis.loc[785408]\n",
+    "df_analysis[df_analysis['EIN']==520595110][['AUDITYEAR', 'TOTFEDEXPEND_ADJUSTED', 'DOLLARTHRESHOLD_ADJUSTED']]\n",
+    "# df_analysis.loc[321123]\n",
+    "# df_analysis[df_analysis['EIN']==710497135][['AUDITYEAR', 'TOTFEDEXPEND_ADJUSTED', 'DOLLARTHRESHOLD_ADJUSTED']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "What is the median `DOLLARTHRESHOLD_ADJUSTED` per year?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -554,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -605,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -619,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -679,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -708,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -729,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -772,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -821,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -857,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -909,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "scrolled": true
